hls_component/hls_component/hls/csim/report/_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch CLANG as the compiler.
   Compiling ../../../../testbench.cpp in debug mode
csim.mk:88: recipe for target 'obj/testbench.o' failed
In file included from ../../../../testbench.cpp:5:
In file included from ../../../../unet3d_reduced.cpp:2:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_axi_sdata.h:15:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
In file included from ../../../../testbench.cpp:5:
../../../../unet3d_reduced.cpp:406:5: error: no matching function for call to 'Conv3dBlock'
    Conv3dBlock(
    ^~~~~~~~~~~
../../../../unet3d_reduced.cpp:30:6: note: candidate function not viable: no known conversion from 'float (*)[1][43][43][11]' to 'float (*)[64][43][43][11]' for 1st argument
void Conv3dBlock(
     ^
../../../../unet3d_reduced.cpp:414:5: error: no matching function for call to 'Conv3dBlock'
    Conv3dBlock(
    ^~~~~~~~~~~
../../../../unet3d_reduced.cpp:30:6: note: candidate function not viable: no known conversion from 'float[1][64][21][21][5]' to 'float (*)[64][43][43][11]' for 1st argument
void Conv3dBlock(
     ^
../../../../unet3d_reduced.cpp:424:5: error: no matching function for call to 'Conv3dBlock'
    Conv3dBlock(
    ^~~~~~~~~~~
../../../../unet3d_reduced.cpp:30:6: note: candidate function not viable: no known conversion from 'float[1][192][43][43][11]' to 'float (*)[64][43][43][11]' for 1st argument
void Conv3dBlock(
     ^
../../../../unet3d_reduced.cpp:430:5: error: no matching function for call to 'Conv3dBlock'
    Conv3dBlock(
    ^~~~~~~~~~~
../../../../unet3d_reduced.cpp:30:6: note: candidate function not viable: no known conversion from 'float (*)[64][3][3][3]' to 'float (*)[128][3][3][3]' for 5th argument
void Conv3dBlock(
     ^
1 warning and 4 errors generated.
make: *** [obj/testbench.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
